force-app/main/default/objects/Gift_Aid_Configuration__c/Gift_Aid_Configuration__c.object-meta.xml
<CustomObject>
    <customSettingsType>Hierarchy</customSettingsType>
    <description>These are the custom settings for GiftAid within the salesforce</description>
    <label>Gift Aid Configuration</label>
</CustomObject>