force-app/main/default/objects/Gift_Aid_Configuration__c/fields/Claim_back_year__c.field-meta.xml
<CustomField>
    <fullName>Claim_back_year__c</fullName>
    <defaultValue>4</defaultValue>
    <inlineHelpText>This is the number of years prior that you can go back an apply for giftaid from a tax payer.</inlineHelpText>
    <label>Claim back year</label>
    <precision>2</precision>
    <required>true</required>
    <scale>0</scale>
    <type>Number</type>
</CustomField>