force-app/main/default/objects/Gift_Aid_Configuration__c/fields/GAC_Review_Status__c.field-meta.xml
<CustomField>
    <fullName>GAC_Review_Status__c</fullName>
    <defaultValue>&#39;In Review&#39;</defaultValue>
    <inlineHelpText>Use this to define what the internal review status is for your organisation</inlineHelpText>
    <label>GAC Review Status</label>
    <length>255</length>
    <required>true</required>
    <type>Text</type>
</CustomField>