force-app/main/default/objects/Gift_Aid_Configuration__c/fields/Gift_Aid_Confirmation_Field__c.field-meta.xml
<CustomField>
    <fullName>Gift_Aid_Confirmation_Field__c</fullName>
    <defaultValue>&#39;Giftable_Record__c&#39;</defaultValue>
    <inlineHelpText>This is a field a checkbox on your Opportunity / Income record that is used to determine if the related contact has confirmed if they pay tax.</inlineHelpText>
    <label>Gift Aid Confirmation Field</label>
    <length>255</length>
    <required>true</required>
    <type>Text</type>
</CustomField>