force-app/main/default/objects/Gift_Aid_Configuration__c/fields/Gift_Aid_Rate__c.field-meta.xml
<CustomField>
    <fullName>Gift_Aid_Rate__c</fullName>
    <inlineHelpText>This is the GiftAid % to be applied to an income/donation record</inlineHelpText>
    <label>Gift Aid Rate</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Percent</type>
</CustomField>