force-app/main/default/objects/Gift_Aid_Configuration__c/fields/Months_between_claims__c.field-meta.xml
<CustomField>
    <fullName>Months_between_claims__c</fullName>
    <defaultValue>1</defaultValue>
    <inlineHelpText>Use this to define how frequently a Gift Aid Claim should be created. This will automatically set the end date for a claim and create a new one when that time is up.</inlineHelpText>
    <label>Months between claims</label>
    <precision>18</precision>
    <required>true</required>
    <scale>0</scale>
    <type>Number</type>
</CustomField>