force-app/main/default/objects/Gift_Aid_Configuration__c/fields/Primary_Contact_Field__c.field-meta.xml
<CustomField>
    <fullName>Primary_Contact_Field__c</fullName>
    <defaultValue>&#39;Gift_Aid_Contact__c&#39;</defaultValue>
    <inlineHelpText>Please provide the API Name of the field on your opportunity that determines who the primary contact for the opportunity is</inlineHelpText>
    <label>Primary Contact Field</label>
    <length>255</length>
    <required>true</required>
    <type>Text</type>
</CustomField>