force-app/main/default/objects/Gift_Aid_Configuration__c/fields/Process_Gift_Aid__c.field-meta.xml
<CustomField>
    <fullName>Process_Gift_Aid__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>Use this to turn on or off the gift aid processes if set to true then it will be active</inlineHelpText>
    <label>Process Gift Aid</label>
    <type>Checkbox</type>
</CustomField>