force-app/main/default/objects/Gift_Aid_Configuration__c/fields/Send_batch_completion_email__c.field-meta.xml
<CustomField>
    <fullName>Send_batch_completion_email__c</fullName>
    <defaultValue>true</defaultValue>
    <inlineHelpText>Use this to confirm if when the daily batch runs we should send a completion notification</inlineHelpText>
    <label>Send batch completion email</label>
    <type>Checkbox</type>
</CustomField>